# kue-intelligence

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  doppler.yaml  mock-api-calls.py  pyproject.toml  vercel.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/: __init__.py  celery_app.py  main.py  schemas.py
app/api/: auth_routes.py  ingestion_routes.py  network_routes.py  routes.py  search_routes.py  sync_routes.py  warm_path_routes.py
app/auth/: deps.py  jwt.py  otp.py
app/core/: config.py
app/ingestion/: __init__.py  admin_reset.py  cache_registry.py  canonical_store.py  connectors.py  csv_import.py  db.py  embedding_store.py  embeddings.py  enrichment.py  entity_resolution.py  entity_store.py  google_connector.py  graph_projection.py  graph_store.py  linkedin_zip_import.py  merge_candidate_store.py  metadata_extraction.py  parsers.py  pipeline_store.py  raw_store.py  relationship_store.py  (+10 more)
docs/: INGESTION_PIPELINE.md  WARM_PATH.md
supabase/: config.toml
tests/: test_admin_reset_api.py  test_csv_import.py  test_entity_merge.py  test_google_oauth_callback.py  test_google_oauth_callback_mock.py  test_ingestion_connectors.py  test_inngest_retry_policy.py  test_layer10_embedding.py  test_layer11_cache.py  test_layer12_indexing.py  test_layer2_capture_store_first.py  test_layer3_parse.py  test_layer4_validation.py  test_layer5_enrichment.py  test_layer6_entity_resolution.py  test_layer7_relationships.py  test_layer8_metadata.py  test_layer9_semantic.py  test_layer_dispatch_endpoints.py  test_linkedin_zip_import.py  test_multi_signal_resolution.py  test_pipeline_stage_upsert.py  test_raw_store_supabase_conflict_fallback.py  test_task_logic.py  test_warm_path.py
(+25 files in other folders)
