[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kue-intelligence"
version = "0.1.0"
description = "FastAPI + Celery AI/Data service scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "celery[redis]>=5.4.0,<6.0.0",
  "redis>=5.0.0,<6.0.0",
  "pandas>=2.2.0,<3.0.0",
  "numpy>=1.26.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]
